@@ -10,6 +10,11 @@ GNU sed NEWS                                    -*- outline -*-
   using the R command to read an input line of length longer than 2GB
   can no longer trigger an out-of-bounds memory read.
 
+** New Features
+
+  The 'r' command now accepts address 0, allowing inserting a file before
+  the first line.
+
 
 * Noteworthy changes in release 4.8 (2020-01-14) [stable]
 
